--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha",
-    "compile": "node ./scripts/compile.js",
+    "test": "NODE_ENV=test mocha --timeout 15000",
+    "compile": "hardhat compile",
     "deploy": "node ./scripts/deploy.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "hardhat": "^2.9.3"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.0.0"
   }
 }
