--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 15000",
     "compile": "hardhat compile",
-    "deploy": "node ./scripts/deploy.js"
+    "deploy": "hardhat run scripts/deploy.js"
   },
   "keywords": [],
   "author": "",
