--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "json-server": "json-server --watch db.json --port 3005"
+    "json-server": "json-server --watch db.json --port 3005",
+    "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types './src/abis/**/*.json'"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -18,6 +19,8 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.4.0",
     "@reduxjs/toolkit": "^1.7.2",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@uniswap/sdk-core": "^3.0.1",
     "@walletconnect/ethereum-provider": "^1.7.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
@@ -32,7 +35,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "typechain": "^8.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
