--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.4.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@typechain/ethers-v5": "^10.0.0",
+    "@uniswap/redux-multicall": "^1.1.1",
     "@uniswap/sdk-core": "^3.0.1",
     "@walletconnect/ethereum-provider": "^1.7.1",
     "@web3-react/core": "^6.1.9",
