--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
+    "@uniswap/sdk-core": "^3.0.1",
     "dotenv": "^16.0.0"
   }
 }
